# graph-node-dev

./: .gitignore  .prettierignore  Cargo.toml  INTEGRATION.md  README.md  build.sh  deploy.sh  docker-compose.yml  graph-node.config.toml  graphman.sh  library.sh  package.json  pf-bsc.sh  pf-eth.sh  pf-sol.sh  pf.sh  resolve.sh  resolve_uniswap.sh  tsconfig.json  undeploy.sh  up.sh
config/: .gitignore  arweave-mainnet.toml  eth-bsc-firehose.toml  eth-localnet-firehose.toml  eth-mainnet-executor.toml  eth-mainnet-firehose.toml  eth-mainnet-rpc.toml  eth-mainnet-substreams-localhost.toml  eth-mainnet-substreams.toml  eth-ropsten-rpc.toml  graph-node.eth-battlefield.toml  graph-node.eth-ropsten.toml  graph-node.ethereum.toml  graph-node.near-battlefield.toml  graph-node.near-mainnet.toml  graph-node.near.toml  graphman.toml  near-battlefield.toml  near-mainnet.toml  near-multiple.toml  near-tesnet.toml  near-testnet.toml  polygon-mainnet-firehose.toml  solana-mainnet.toml  substreams-generic.toml
contracts/: build.sh
contracts/src/: omnibus.sol
subgraphs/: transfer.graphql  transfer.yaml
subgraphs/src/: factory.ts
subgraphs/substreams/ethereum/: .gitignore  Cargo.toml  ethereum-network-v1-v0.1.0.spkg  ethereum-network-v1-v0.2.0.spkg  mainnet-network_resolved.yaml  substreams.yaml
subgraphs/substreams/ethereum/proto/network/v1/: network.proto
subgraphs/substreams/ethereum/src/: lib.rs  macros.rs
subgraphs/substreams/ethereum/src/pb/: mod.rs  network.types.v1.rs
substreams/ethereum/: Cargo.toml  build.rs  mainnet-network.yaml  schema.graphql
(+92 files in other folders)
