[package]
name = "substreams-network-v1"
version = "0.1.0"
description = "Substreams network v1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
prost = { version = "^0.11.0" }
prost-types = "^0.11.0"
substreams = { version = '~0.0.20' }
substreams-ethereum = { version = '~0.2.0' }
num-bigint = "0.4"
bigdecimal = "0.3"
